--- a/src/app/common/header-bar/header-bar.component.html
+++ b/src/app/common/header-bar/header-bar.component.html
@@ -13,6 +13,10 @@
 <!--    <button>-->
 <!--      <i class="fa-solid fa-bars"></i>-->
 <!--    </button>-->
+
+<!--    <button (click)="logout()" class="w-full text-left block px-4 py-2 text-red-600 hover:bg-gray-100">-->
+<!--      Logout-->
+<!--    </button>-->
   </div>
 </header>
 
