--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .dropDown{
   @apply
-  w-90 h-12 border
+  w-80 h-12 border
   border-gray-300
   rounded-md
   py-2 px-3
@@ -25,7 +25,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   mb-3
   block
   p-2
-  w-90
+  lg:w-80
   h-12 rounded-md border-gray-300 shadow-md
   border-1
 }
@@ -37,7 +37,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .remarks{
   @apply
-  mt-2 block p-4 w-90 rounded-md border-gray-300 shadow-lg
+  mt-2 block p-4 w-80 rounded-md border-gray-300 shadow-lg
 }
 
 .custom-button-global {
