--- a/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
@@ -1,7 +1,7 @@
-<div class="mx-auto p-6 bg-white shadow-md rounded-lg">
+<div class="mx-auto p-6 bg-white shadow-md rounded-lg space-y-5">
   <h2 class="text-xl font-semibold mb-6">Basic Information</h2>
 
-  <div class="flex justify-start space-x-10 items-start">
+  <div class="flex justify-start space-x-20 items-start">
     <!-- Challan No. and Challan Date -->
     <div>
       <label class="input-level">Challan No.</label>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <div class="flex space-x-10">
+  <div class="flex space-x-20">
     <!-- Received By -->
     <div>
       <label class="input-level">Received By</label>
