--- a/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
@@ -1,14 +1,41 @@
-<div class="p-4 rounded shadow-md w-full bg-white">
-  <p class="text-lg font-semibold mb-2">Stock In Type:</p>
+<div class="bg-grey">
+  <div class="p-4 rounded shadow-md w-full bg-white">
+    <p class="text-lg font-semibold mb-2">Stock In Type:</p>
 
-  <mat-radio-group [(ngModel)]="pageToGo" (change)="handleAction($event.value)" class="grid grid-cols-3 gap-2 p-2">
-    <mat-radio-button value="1">PO Receive</mat-radio-button>
-    <mat-radio-button value="2">Receive with other Documents</mat-radio-button>
-    <mat-radio-button value="3">Gift</mat-radio-button>
-  </mat-radio-group>
-</div>
+    <mat-radio-group [(ngModel)]="pageToGo" (change)="handleAction($event.value)" class="grid grid-cols-3 gap-2 p-2">
+      <mat-radio-button value="1">PO Receive</mat-radio-button>
+      <mat-radio-button value="2">Receive with other Documents</mat-radio-button>
+      <mat-radio-button value="3">Gift</mat-radio-button>
+    </mat-radio-group>
+  </div>
 
-<!-- Conditionally Load Component -->
-<div *ngIf="selectedComponent" class="w-full h-auto mt-4">
-  <ng-container *ngComponentOutlet="selectedComponent"></ng-container>
+  <!-- Conditionally Load Component -->
+  <div *ngIf="selectedComponent" class="w-full h-auto mt-4">
+    <ng-container *ngComponentOutlet="selectedComponent"></ng-container>
+  </div>
+
+
+  <div class="">
+    <div class="flex items-center justify-start pl-1 pt-4 w-100">
+      <label for="dropzone-file" class="flex flex-col items-center justify-center border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-white hover:bg-gray-100">
+        <div class="flex items-center justify-center space-x-2 p-2">
+          <i class="material-icons text-gray-900">download</i>
+          <p class="mb-2 text-lg text-gray-900 mt-2"><span class="font-semibold">Click to download</span> or drag and drop</p>
+        </div>
+      </label>
+    </div>
+    <div>
+      <input id="dropzone-file" class="p-2 m-2" type="file"/>
+    </div>
+  </div>
+  <!-- Remarks -->
+  <div class="flex sm:flex-row sm:space-x-6 lg:space-x-6 mt-4 ml-2">
+    <div class="flex-1 mb-4 sm:mb-0 sm:col-span-2">
+      <label for="remarks" class="input-level">Remarks</label>
+      <textarea id="remarks" class=" mt-2 block border-2 p-4 w-100 h-50 rounded-md border-gray-300 shadow-lg" rows="3" placeholder="Write comment about the item..."></textarea>
+    </div>
+  </div>
+  <!-- Link to Google Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </div>
