--- a/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
@@ -1,14 +1,14 @@
 <div class="mx-auto p-6 bg-white shadow-md rounded-lg space-y-5">
   <h2 class="text-xl font-semibold mb-6">Basic Information</h2>
 
-  <div class="flex justify-start space-x-20 items-start">
+  <div class="flex justify-start space-x-15 items-start">
     <!-- Challan No. and Challan Date -->
     <div>
       <label class="input-level">Challan No.</label>
       <input type="text" placeholder="Type Challan Number" class="input-field">
     </div>
 
-    <div>
+    <div class="">
       <label class="input-level mb-3">Challan Date.</label>
       <mat-form-field class=" w-[120%] h-17">
         <mat-label>Select a date</mat-label>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <div class="flex space-x-20">
+  <div class="flex space-x-15">
     <!-- Received By -->
     <div>
       <label class="input-level">Received By</label>
