--- a/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
@@ -67,3 +67,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </div>
+<div class="flex justify-between items-center pl-4 bg-white mt-5 mb-0 ">
+  <button class="bg-pink-300 p-4 rounded-lg cursor-pointer hover:bg-pink-400">Save as Draft</button>
+  <div class="flex space-x-5 p-4">
+    <button class="shadow-lg rounded p-4 bg-white cursor-pointer hover:bg-gray-200">Cancel</button>
+    <button class="custom-button-global p-4 cursor-pointer hover:bg-blue-500 hover:bg-black">Next</button>
+  </div>
+</div>
