--- a/src/app/templete/customized-table/customized-table.component.css
+++ b/src/app/templete/customized-table/customized-table.component.css
@@ -110,3 +110,10 @@
 .search-button:hover {
   background-color: #45a049;
 }
+.clickable-row {
+  cursor: pointer;
+}
+
+.clickable-row:hover {
+  background-color: #f5f5f5; /* Add a hover effect */
+}
