--- a/src/app/templete/customized-table/customized-table.component.html
+++ b/src/app/templete/customized-table/customized-table.component.html
@@ -39,26 +39,31 @@
 
   <div class="mat-elevation-z8 ">
     <div class="table-responsive">
-      <table mat-table [dataSource]="dataSource" matSort class="w-full border border-gray-300 ">
+      <table mat-table [dataSource]="dataSource" matSort class="w-full border border-gray-300">
 
         <!-- Dynamic Column Definitions -->
         <ng-container *ngFor="let column of columns" [matColumnDef]="column.key">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head">
             {{ column.label }}
           </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="iv_custom_row">
             {{ row[column.key] }}
           </td>
         </ng-container>
 
+        <!-- Header Row -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!-- Row shown when there is no matching data. -->
+        <!-- Data Row (Clickable) -->
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="clickable-row" (click)="onRowClick(row)"></tr>
+
+        <!-- Row shown when there is no matching data -->
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" [attr.colspan]="columns.length">No data matching the filter "{{input.value}}"</td>
         </tr>
+
       </table>
+
     </div>
 
     <mat-paginator class="custom-pagination" [pageSizeOptions]="[20, 50, 100]" aria-label="Select page"></mat-paginator>
