--- a/src/app/templete/customized-table/customized-table.component.css
+++ b/src/app/templete/customized-table/customized-table.component.css
@@ -117,3 +117,36 @@
 .clickable-row:hover {
   background-color: #f5f5f5; /* Add a hover effect */
 }
+.status-badge {
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 12px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.approved {
+  background-color: #e6f9e6;
+  color: #006400;
+}
+
+.pending {
+  background-color: #fff8dc;
+  color: #ff8c00;
+}
+
+.qc-pending {
+  background-color: #eef7ff;
+  color: #0073e6;
+}
+
+.rejected {
+  background-color: #ffecec;
+  color: #d9534f;
+}
+
+.send-back {
+  background-color: #fffaf0;
+  color: #ff6700;
+}
+
