--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-size: 16px !important;
   padding-top: 4px;
   padding-bottom: 4px;
+  cursor: pointer;
 }
 
 .custom-button-global:hover {
@@ -57,5 +58,18 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .cancel-button{
   @apply
   cursor-pointer bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600
+}
+
+.TakeActionDropDown{
+  @apply
+  w-40 h-11 border
+  border-gray-300
+  rounded-md
+  py-2 px-2
+  m-1
+  text-white
+  bg-black
+  focus:ring-2 focus:ring-gray-500 focus:border-b-gray-600
+  shadow-md
 }
 
