--- a/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/add-stock.component.html
@@ -71,6 +71,6 @@
   <button class="bg-pink-300 p-4 rounded-lg cursor-pointer hover:bg-pink-400">Save as Draft</button>
   <div class="flex space-x-5 p-4">
     <button class="shadow-lg rounded p-4 bg-white cursor-pointer hover:bg-gray-200">Cancel</button>
-    <button class="custom-button-global p-4 cursor-pointer hover:bg-blue-500 hover:bg-black">Next</button>
+    <button class="custom-button-global p-4 cursor-pointer hover:bg-blue-500">Next</button>
   </div>
 </div>
