--- a/src/app/serviceItem/category/add-category/add-category/add-category.component.html
+++ b/src/app/serviceItem/category/add-category/add-category/add-category.component.html
@@ -16,13 +16,13 @@
         <!-- Item Name -->
         <div class="flex-1 mb-4 sm:mb-0">
           <label for="itemName" class="input-level">Item Name</label>
-          <input id="itemName" type="text" class="input-field" placeholder="Type Item Name">
+          <input id="itemName" type="text" class="input-field w-80" placeholder="Type Item Name">
         </div>
 
         <!-- Specification -->
         <div class="flex-1 mb-4 sm:mb-0">
           <label for="specification" class="input-level">Specification</label>
-          <input id="specification" type="text" class="input-field" placeholder="Type Specification">
+          <input id="specification" type="text" class="input-field w-80" placeholder="Type Specification">
         </div>
       </div>
 
@@ -30,12 +30,12 @@
         <!-- Item Code -->
         <div class="flex-1 mb-4 sm:mb-0">
           <label for="itemCode" class="input-level">Item Code</label>
-          <input id="itemCode" type="text" class="input-field" placeholder="Type Item Code">
+          <input id="itemCode" type="text" class="input-field w-80" placeholder="Type Item Code">
           <div class="mt-2 flex items-center space-x-2">
             <label class="inline-flex items-center space-x-2 cursor-pointer">
               <input type="checkbox" value="" class="sr-only peer">
               <span class="m-1 text-sm font-light text-gray-800">Want to Map with Master Item?</span>
-              <div class="relative w-11 lg:ml-19 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600 dark:peer-checked:bg-blue-600"></div>
+              <div class="relative w-11 lg:ml-19 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-200 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600 dark:peer-checked:bg-blue-600"></div>
             </label>
           </div>
         </div>
