--- a/src/app/serviceItem/item-group/add-item-group/add-item-group.component.html
+++ b/src/app/serviceItem/item-group/add-item-group/add-item-group.component.html
@@ -18,13 +18,13 @@
       <div class="pl-12">
         <div>
           <label for="itemGroupName" class="input-level">Item Group Name</label>
-          <input id="itemGroupName" type="text" class="input-field" placeholder="Type Item Name">
+          <input id="itemGroupName" type="text" class="input-field w-full" placeholder="Type Item Name">
         </div>
 
         <!-- Remarks -->
         <div>
-          <label for="remarks" class="input-level">Description</label>
-          <textarea id="remarks" class="remarks w-full p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="3" placeholder="Write comment about the item..."></textarea>
+          <label for="remarks" class="input-level mb-2">Description</label>
+          <textarea id="remarks" class=" w-full p-2 border rounded-md border-gray-300 shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="3" placeholder="Write comment about the item..."></textarea>
         </div>
       </div>
 
