--- a/src/app/serviceItem/item/add-item-form/add-item.component.html
+++ b/src/app/serviceItem/item/add-item-form/add-item.component.html
@@ -15,7 +15,7 @@
       <div class="lg:flex" >
         <div class="mb-4 lg:mb-0 lg:w-1/2">
           <label for="itemName" class="input-level">Item Name</label>
-          <input id="itemName" type="text" class="input-field" placeholder="Type Item Name">
+          <input id="itemName" type="text" class="input-field w-80" placeholder="Type Item Name">
         </div>
 
         <!-- Item Group -->
@@ -33,7 +33,7 @@
       <div class="lg:flex">
         <div class="mb-4 lg:mb-0 lg:w-1/2">
           <label for="specification" class="input-level">Specification</label>
-          <input id="specification" type="text" class="input-field" placeholder="Type Specification">
+          <input id="specification" type="text" class="input-field w-80" placeholder="Type Specification">
         </div>
 
         <!-- UoM -->
