--- a/src/app/serviceItem/stock-in/add-stock/gift/gift.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/gift/gift.component.html
@@ -5,7 +5,7 @@
     <!-- Vendor Name -->
     <div>
       <label class="input-level">Organization Name</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Vendor</option>
         <option>WHO</option>
         <option>UNSCO</option>
@@ -15,7 +15,7 @@
     <!-- Received By -->
     <div>
       <label class="input-level">Receiver</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Receiver</option>
         <option>Select Receiver2</option>
         <option>Select Receiver3</option>
