--- a/src/app/serviceItem/stock-in/add-stock/po-receive/po-receive.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/po-receive/po-receive.component.html
@@ -7,7 +7,7 @@
     <!-- PO No. -->
     <div>
       <label class="input-level">PO No.</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Vendor</option>
         <option>Select Vendor2</option>
         <option>Select Vendor3</option>
@@ -29,7 +29,7 @@
     <!-- Received By -->
     <div>
       <label class="input-level">Received By</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Receiver</option>
         <option>Select Receiver2</option>
         <option>Select Receiver3</option>
@@ -40,13 +40,13 @@
     <!-- Vendor Name -->
     <div>
       <label class="input-level">Vendor Name</label>
-      <input type="text" placeholder="Type Vendor Name" class="input-field">
+      <input type="text" placeholder="Type Vendor Name" class="input-field w-80">
     </div>
 
     <!-- Challan No. Mushok -->
     <div>
       <label class="input-level">Challan No. Mushok</label>
-      <input type="text" placeholder="Type Mushok Name" class="input-field">
+      <input type="text" placeholder="Type Mushok Name" class="input-field w-80">
     </div>
 
     <!-- Second Receive Date -->
