--- a/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
+++ b/src/app/serviceItem/stock-in/add-stock/rod/rod.component.html
@@ -5,7 +5,7 @@
     <!-- Challan No. and Challan Date -->
     <div>
       <label class="input-level">Challan No.</label>
-      <input type="text" placeholder="Type Challan Number" class="input-field">
+      <input type="text" placeholder="Type Challan Number" class="input-field w-80">
     </div>
 
     <div class="">
@@ -22,7 +22,7 @@
     <!-- Vendor Name -->
     <div>
       <label class="input-level">Vendor Name</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Vendor</option>
         <option>Select Vendor2</option>
         <option>Select Vendor3</option>
@@ -35,7 +35,7 @@
     <!-- Received By -->
     <div>
       <label class="input-level">Received By</label>
-      <select class="input-field">
+      <select class="input-field w-80">
         <option>Select Receiver</option>
         <option>Select Receiver2</option>
         <option>Select Receiver3</option>
