--- a/src/app/templete/customized-table/customized-table.component.css
+++ b/src/app/templete/customized-table/customized-table.component.css
@@ -154,3 +154,13 @@
   background-color: #cccccc;
 }
 
+.inactive{
+  background-color: #ffecec;
+  color: #d9534f;
+}
+
+.active{
+  background-color: #eef7ff;
+  color: #0073e6;
+}
+
