--- a/src/app/templete/table-with-filter/table-with-filter.component.css
+++ b/src/app/templete/table-with-filter/table-with-filter.component.css
@@ -59,6 +59,15 @@
     display: block;
   }
 }
+.inactive{
+  background-color: #ffecec;
+  color: #d9534f;
+}
+
+.active{
+  background-color: #eef7ff;
+  color: #0073e6;
+}
 
 
 
