--- a/src/app/serviceItem/UAM/role/role-uam-list/role-uam-list.component.html
+++ b/src/app/serviceItem/UAM/role/role-uam-list/role-uam-list.component.html
@@ -1,8 +1,9 @@
 <div class="grid grid-cols-2 gap-4 items-center">
   <h2 class="page-header" >Role Management</h2>
   <div class="example-button-row">
-    <button mat-stroked-button class="float-right mr-5 custom-button-global " [routerLink]="'/add-item-group'">
+    <button mat-stroked-button class="float-right mr-5 custom-button-global " [routerLink]="'/uam/add-role'">
       <span class="material-icons pr-2" style="font-size: 16px">{{'add'}}</span>Add Role</button>
   </div>
 </div>
+<app-table-with-filter [columns]="tableColumns" [data]="tableData"></app-table-with-filter>
 <router-outlet/>
